# helen

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  P0_OPTIMIZATION_REPORT.md  P1_IMPROVEMENTS.md  P1_P2_OPTIMIZATION_REPORT.md  README.md  full_test.py  pyproject.toml  quick_test.py  setup.py  test2.py  v1.py  verify.py
.github/workflows/: ci.yml
agents/: HELEN_LANGUAGE_ISSUES.md  HELEN_LANGUAGE_LIMITATIONS.md  README.md  REFACTOR_PLAN.md  contractor.helen  helen_programmer.helen  implementer.helen  programming_agent.helen  programming_agent_v3.helen  quality_gate.helen  skill_evaluator.helen  skill_evolver.helen  skill_learner.helen  skill_manager.helen  skill_matcher.helen  test_bool.helen  test_builder.helen
agents/contracts/: __init__.py  agent_contracts.py  contracts.helen  contracts_v3.helen
agents/memory/: MEMORY.md  USER.md
agents/skills/: SKILL_INDEX.md
docs/: COMPARISON.md  PYTHON_3.12_UPGRADE.md  async-interpreter-plan.md  detach_thread_safety_fix.md  keyword_stdlib_reference.md  phase1_ssot_implementation.md  phase1b-summary.md  python_bridge.md  stdlib_design.md  stdlib_implementation_plan.md  stdlib_implementation_report.md  stdlib_p1_implementation_report.md  stdlib_p2_p3_implementation_report.md  transcript_store_final_audit.md  transcript_store_ssot_complete.md  transcript_store_ssot_plan.md  transcript_store_user_guide.md  tutorial.md
docs/plans/: 2026-06-16-helen-language-assistant.md  2026-06-20-helen-programming-agent.md
examples/: chatbot.helen  chatbot.hellen  cli_args_demo.helen  helenchat.helen  helenchat_simple.helen  quality_example.helen  test_example.helen  test_llm_act.helen
examples/helenchat/: HELEN_IMPROVEMENTS.md  README.md  helenchat.helen
examples/python_bridge/: example_usage.py  test_simple.py  translator.helen
extensions/vscode/: .vscodeignore  README.md  language-configuration.json  package.json
helen/: __init__.py
helen/agent/: helen_assistant.helen  helen_programming_agent.helen
helen/cli/: __init__.py  __main__.py  docgen.py  formatter.py  repl.py
helen/core/: __init__.py  ast.py  errors.py  lexer.py  parser.py  source.py  tokens.py
helen/ffi/: __init__.py  contracts.py  python_module.py  python_object.py  python_runtime.py  type_converter.py
helen/interpreter/: __init__.py  agent_context.py  async_interpreter.py  closure.py  environment.py  exception_mixin.py  exceptions.py  import_mixin.py  interpreter.py  llm_mixin.py  pattern_mixin.py  readonly_view.py  shared_store.py  streaming_mixin.py  task.py
helen/lsp/: server.py
helen/python_bridge/: __init__.py  agent_wrapper.py  decorators.py  function_wrapper.py  import_hook.py  type_converter.py
helen/runtime/: __init__.py  async_iterator_contracts.py  cache_aware_compression.py  channel.py  config.py  constants.py  context_awareness.py  context_recovery.py  fuzzy_match.py  graduated_compression.py  hermes_cli_llm.py  history.py  http_llm.py  import_resolver.py  llm_runtime.py  llm_summarizer.py  media.py  media_storage.py  memory.py  observability.py  prompt_builder.py  reactive_compaction.py  security.py  session_manager.py  stream_contracts.py  streaming_response.py  structured.py  token_utils.py  tools.py  transcript_store.py  working_memory.py
helen/semantic/: __init__.py  analyzer.py  symbols.py  type_utils.py  types.py
helen/skills/: LICENSE-THIRD-PARTY.md  README.md
helen/stdlib/: __init__.py  collection.py  collection_contracts.py  context.py  crypto.py  crypto_contracts.py  data.py  data_contracts.py  data_formats.py  data_formats_contracts.py  file_advanced.py  file_advanced_contracts.py  llm_control.py  mailbox.py  math_stats.py  math_stats_contracts.py  media.py  network.py  network_contracts.py  quality.py  stream_contracts.py  string.py  string_contracts.py  system.py  system_contracts.py  test.py  time.py  time_contracts.py  tools.py  transcript.py
helen/templates/: README.md  context_object.helen  pipeline.helen  shared_store.helen  simple_agent.helen  spawn_channel.helen  spawn_with_transcript.helen
hellen/: __init__.py
hellen/cli/: __init__.py  __main__.py  docgen.py  formatter.py  repl.py
hellen/core/: __init__.py  ast.py  errors.py  lexer.py  parser.py  source.py  tokens.py
hellen/interpreter/: __init__.py  environment.py  exceptions.py  interpreter.py
hellen/lsp/: server.py
hellen/runtime/: __init__.py  history.py  import_resolver.py  llm_runtime.py  memory.py  prompt_builder.py  structured.py
hellen/semantic/: __init__.py  analyzer.py  symbols.py  types.py
memory/: MEMORY.md
reports/: ARCHITECTURE_ISSUES_ANALYSIS.md  CONTEXT_ENHANCEMENT_COMPLETE.md  CONTEXT_ENHANCEMENT_IMPLEMENTATION_PLAN.md  CONTEXT_ENHANCEMENT_VS_CLAUDE_CODE.md  CONTEXT_ENHANCEMENT_VS_CLAUDE_CODE.old.md  CONTEXT_MANAGEMENT_IMPLEMENTATION.md  HELEN_VS_CLAUDE_CODE_GAP_ANALYSIS.md  HISTORY_PERSISTENCE_ANALYSIS.md  ISSUE_23_24_FIX.md  LLM_DISCOVERY.md  P0_P1_IMPLEMENTATION_REPORT.md  P2_ROLE_SEPARATION_REPORT.md  PERFORMANCE_ANALYSIS.md  PHASE1_IMPLEMENTATION.md  PHASE1_TO_PHASE7_SUMMARY.md  PHASE6_CACHE_AWARE_COMPRESSION.md  PHASE7_AGENT_INTEGRATION.md  PHASE7_COMPLETION_REPORT.md  README.md  REORGANIZATION_REPORT.md  SHELL_EXEC_BASH_FIX.md  SHELL_EXEC_SIMPLIFIED.md  SHELL_EXEC_SMART_DETECTION.md  SYSTEM_PROMPT_ENHANCEMENT.md  agent-dsl-landscape-research.md  architecture-analysis-2026-07-19.md  code-health-report-2026-07-11.md  code_analysis_report.md  detach_thread_safety_and_shared_store_integration.md  final-update-report-2026-07-01.md  helen-strategic-analysis-2026.md  isolation-complexity-reduction-proposal.md  lint-report-2026-07-01.md  multimodal-ai-api-research-2026.md  multimodal-proposal.md  phase1-report-2026-07-01.md  phase2-report-2026-07-01.md  phase3-report-2026-07-01.md  phase4-report-2026-07-01.md  phase5-report-2026-07-01.md  (+7 more)
scripts/: build_tutorial.py  run_tests_batch.sh
skills/: README.md
tests/: conftest.py  fix_verification.helen  test_observability.py
vscode-extension/: LICENSE  language-configuration.json  package.json
wiki/: check_skills.sh  generate_skill_tests.py  index.md  log.md  schema.md
(+843 files in other folders)
