[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "helen"
version = "0.1.0"
description = "Helen — A Prompt-first Agent Programming Language"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Helen Team", email = "helen@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
    "toml>=0.10",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/hahalee000000/helen"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "pytest-asyncio>=0.21.0", "flake8>=6.0"]
# P3: Accurate token counting via tiktoken (optional, falls back to heuristic)
accurate-tokens = ["tiktoken>=0.5.0"]
# All optional features
all = ["tiktoken>=0.5.0"]

[project.scripts]
helen = "helen.cli.__main__:main"

[tool.setuptools.packages.find]
include = ["helen*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["helen"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E501"]
